fixed z-index animation

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -26,19 +26,24 @@ html, body {
     overflow: hidden;
 }
 
-.app-mainWindow-overlay-active {
-    background-color: rgba(0, 0, 0, 0.65);
-    z-index: 2;
-}
-
 .app-mainWindow-overlay, .app-mainWindow-overlay-active {
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     left: 0;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, z-index 0.1s step-end;
 }
+
+.app-mainWindow-overlay {
+    z-index: 0;
+}
+
+.app-mainWindow-overlay-active {
+    background-color: rgba(0, 0, 0, 0.65);
+    z-index: 2;
+}
+
 
 .app-signInForm, .app-signInForm-visible {
     position: absolute;
